minor bugfix for width of card and timeline section wasn't covering the full width

--- a/_sass/home/_static.scss
+++ b/_sass/home/_static.scss
@@ -115,7 +115,7 @@
 #bk-timeline {
   background: url('/assets/img/dev/textures/binding-dark.png'), $blue-black;
   padding: 100px 0;
-  width: calc(100% - 10px);
+  width: 100%;
   // @include media-query($small){
   //   background: url('/assets/img/dev/berlin.png') no-repeat center, #5a5a5a;
   //   background-size: auto 70%;
@@ -460,7 +460,7 @@ section#social {
 
 .bk-card {
   width: calc(100% - 20px);
-  max-width: 300px;
+  max-width: 500px;
   margin: 10px;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
   border-radius: 2px;
